clusters/beelink-talos/novacart/cart-shipping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: novacart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: ghcr.io/open-telemetry/demo:2.1.3-cart
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7070
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 224Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: novacart
spec:
  selector:
    app: cart
  ports:
    - name: http
      port: 7070
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  namespace: novacart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
        - name: shipping
          image: ghcr.io/open-telemetry/demo:2.1.3-shipping
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 50050
          readinessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 150m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: novacart
spec:
  selector:
    app: shipping
  ports:
    - name: grpc
      port: 50050
      targetPort: grpc
