clusters/beelink-talos/novacart/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: novacart
spec:
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 9092
      targetPort: plaintext
    - name: controller
      port: 9093
      targetPort: controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: novacart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: ghcr.io/open-telemetry/demo:2.1.3-kafka
          ports:
            - name: plaintext
              containerPort: 9092
            - name: controller
              containerPort: 9093
          readinessProbe:
            tcpSocket:
              port: plaintext
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: plaintext
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 700Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
