clusters/beelink-talos/novacart/recommendation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
  namespace: novacart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
    spec:
      containers:
        - name: recommendation
          image: ghcr.io/open-telemetry/demo:2.1.3-recommendation
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 9001
          readinessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 96Mi
---
apiVersion: v1
kind: Service
metadata:
  name: recommendation
  namespace: novacart
spec:
  selector:
    app: recommendation
  ports:
    - name: grpc
      port: 9001
      targetPort: grpc
